--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 
-name = "image-rotation-worker"
+name = "image-rotation"
 account_id = "eec00739050a8a4cbf359a1dedb8cad3"
 workers_dev = true
 compatibility_date = "2023-11-20"
